src/distributed/snapshots/asupersync__distributed__assignment__tests__golden_plan_striped_strategy.snap
---
source: src/distributed/assignment.rs
expression: plan
---
[
    ReplicaAssignment {
        replica_id: "r0",
        symbol_indices: [
            0,
            3,
            6,
        ],
        can_decode: false,
    },
    ReplicaAssignment {
        replica_id: "r1",
        symbol_indices: [
            1,
            4,
            7,
        ],
        can_decode: false,
    },
    ReplicaAssignment {
        replica_id: "r2",
        symbol_indices: [
            2,
            5,
        ],
        can_decode: false,
    },
]
